CENTERING ISSUE ON FIREFOX AND SMALL CHANGES TO TEXT
Resolved the issue with the game not being centered on firefox. I
didn't know width: fit-content needs the -moz- prefix.

Displayed who is playing as O and who is X.

Made it clear it is the users name being asked for when playing against
the computer.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
 /*All the parts to do with the game.*/
 .gameContainer {
     width: fit-content;
+    width: -moz-fit-content;
     margin: 0 auto;
     display: grid;
     grid-template-areas: "theTop theTop theTop"
@@ -43,11 +44,13 @@ button {
 
 .gameType {
     width: fit-content;
+    width: -moz-fit-content;
     margin: 0 auto;
 }
 
 .playerInput {
     width: fit-content;
+    width: -moz-fit-content;
     margin: 10px auto;
 }
 
